--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Kyle Dormer</title>
   </head>
 
-  <body></body>
+  <body>
+    <section>
+      <h1>Kyle Dormer</h1>
+      <p>I'm a student.</p>
+      <p><a href="blog.php">Here's</a> what I've been up to.</p>
+    </section>
+
+    <section class="contact-me">
+      <h2>Get in Touch</h2>
+      <form action="contact.php" method="POST">
+        <label for="name">Your name:</label>
+        <input type="text" name="name" id="name" minlength="1" maxlength="16" />
+
+        <label for="email">Your email:</label>
+        <input type="email" name="email" id="email" maxlength="24" />
+
+        <label for="message">Your message:</label>
+        <textarea
+          name="message"
+          id="message"
+          minlength="1"
+          maxlength="2000"
+        ></textarea>
+
+        <input type="submit" value="Send message" />
+      </form>
+    </section>
+  </body>
 </html>
