--- a/index.html
+++ b/index.html
@@ -4,24 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="styles/global.css" />
     <title>Kyle Dormer</title>
   </head>
-
-  <style>
-    body {
-      margin: 1em auto;
-      max-width: 40em;
-      padding: 0 0.62em;
-      font: 1.2em/1.62 sans-serif;
-      text-align: center;
-    }
-
-    h1,
-    h2,
-    h3 {
-      line-height: 1.2;
-    }
-  </style>
 
   <body>
     <h1>Kyle Dormer.</h1>
