Add new content and styles

--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
   </head>
 
   <body>
-    <h1>Kyle Dormer.</h1>
-    <p>I'm a student.</p>
-    <p><a href="mailto:hello@kyledormer.co.uk">Talk to me.</a></p>
+    <header>
+      <img src="images/avatar.jpg" alt="Family at the Beach" />
+      <h1>Kyle Dormer</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="about-me.html">About Me</a></li>
+        <!-- <li><a href="#">Blog</a></li> -->
+        <li>
+          <a href="https://github.com/kyle-dormer" target="_blank">Code</a>
+        </li>
+        <li><a href="mailto:hello@kyledormer.co.uk">Contact Me</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
