--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="keywords" content="Kyle Dormer" />
+    <meta
+      name="description"
+      content="I am currently a nineteen year old student of Computing. As it stands, my
+      biggest interests are full-stack web development, Python and C. I have had
+      an interest in computers for as long as I can remember and my interest in
+      them only grows as my knowledge increases. Outside of university, I enjoy
+      bushcraft, hiking, music and reading. This is my website."
+    />
     <link rel="stylesheet" href="styles/global.css" />
     <title>Kyle Dormer</title>
   </head>
