--- a/about-me.html
+++ b/about-me.html
@@ -19,11 +19,9 @@
   <body>
     <h1>About Me</h1>
     <p>
-      I am currently a nineteen year old student of Computing. As it stands, my
-      biggest interests are full-stack web development, Python and C. I have had
-      an interest in computers for as long as I can remember and my interest in
-      them only grows as my knowledge increases. Outside of university, I enjoy
-      bushcraft, hiking, music and reading.
+      I am currently an undergraduate student of Computing. As it stands, my
+      biggest interests are full-stack web development, Python and C. Outside of
+      university, I enjoy bushcraft, hiking, music and reading.
     </p>
     <p><a href="index.html">Return to Home</a></p>
   </body>
