--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <meta name="keywords" content="Kyle Dormer" />
     <meta
       name="description"
-      content="I am currently a nineteen year old student of Computing. As it stands, my
-      biggest interests are full-stack web development, Python and C. I have had
-      an interest in computers for as long as I can remember and my interest in
-      them only grows as my knowledge increases. Outside of university, I enjoy
-      bushcraft, hiking, music and reading. This is my website."
+      content="My name is Kyle Dormer. I am currently an undergraduate student of Computing. As it stands, my
+      biggest interests are full-stack web development, Python and C. Outside of
+      university, I enjoy bushcraft, hiking, music and reading. This is my website."
     />
     <link rel="stylesheet" href="styles/global.css" />
     <title>Kyle Dormer</title>
