Change about me page content

--- a/about-me.html
+++ b/about-me.html
@@ -17,8 +17,9 @@
   <body>
     <h1>About Me</h1>
     <p>
-      I am currently an undergraduate student of Computing. As it stands, my
-      biggest interests are full-stack web development, Python and C. Outside of
+      I am currently an undergraduate student of Computing. Within the realm of
+      computing, I am most interested in full-stack web development and
+      low-level programming, which is admittedly quite the contrast. Outside of
       university, I enjoy bushcraft, hiking, music and reading.
     </p>
     <p><a href="index.html">Return to Home</a></p>
