Change meta desc to match new about me content

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta name="keywords" content="Kyle Dormer" />
     <meta
       name="description"
-      content="My name is Kyle Dormer. I am currently an undergraduate student of Computing. As it stands, my
-      biggest interests are full-stack web development, Python and C. Outside of
-      university, I enjoy bushcraft, hiking, music and reading. This is my website."
+      content="I am currently an undergraduate student of Computing. Within the realm of
+      computing, I am most interested in full-stack web development and
+      low-level programming, which is admittedly quite the contrast. Outside of
+      university, I enjoy bushcraft, hiking, music and reading."
     />
     <link rel="stylesheet" href="styles/global.css" />
     <title>Kyle Dormer</title>
