--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 
   <body>
     <header>
-      <img src="images/avatar.jpg" alt="Family at the Beach" />
+      <img src="images/avatar.jpg" alt="Myself on a lovely summer evening." />
       <h1>Kyle Dormer</h1>
     </header>
     <nav>
       <ul>
         <li><a href="about-me.html">About Me</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li>
           <a href="https://github.com/kyle-dormer" target="_blank">Code</a>
         </li>
