Update about me page

--- a/about-me.html
+++ b/about-me.html
@@ -15,14 +15,42 @@
     <link rel="stylesheet" href="styles/global.css" />
     <title>Kyle Dormer - About Me</title>
   </head>
-  <body>
+  <body class="about-me">
     <h1>About Me</h1>
     <p>
-      I am currently an undergraduate student of Computing. Within the realm of
-      computing, I am most interested in full-stack web development and
-      low-level programming, which is admittedly quite the contrast. Outside of
-      university, I enjoy bushcraft, hiking, music and reading.
+      I am a first-year (very soon to be second-year) undergraduate student of
+      Computing at the University of Gloucestershire. My biggest interest within
+      the realm of computing is full-stack web development although I am more
+      partial to the backend side of things. I'm currently learning and
+      experimenting with
+      <a href="https://laravel.com/" target="_blank">Laravel</a>, which I'm
+      finding to be very comfy to use and develop with, and a nice breath of
+      fresh air to the usual full-JavaScript stack that so many evangelise these
+      days.
     </p>
-    <p><a href="index.html">Return to Home</a></p>
+
+    <p>
+      Outside of the subject my biggest interests lie in Bushcraft, reading and
+      the guitar - they go together a lot more than you would expect! In my
+      view, the natural world is sustaining far too much damage, so much so that
+      even in my rural village area I've taken to taking a bin-bag out with me
+      because the obscene amount of litter I walk past on the way to the local
+      woods is downright <em>infuriating</em>. Although my preferences for
+      privacy point me towards search engines such as
+      <a href="https://duckduckgo.com/" target="_blank">DuckDuckGo</a> or, even
+      better, a random
+      <a href="https://searx.space/" target="_blank">Searx instance</a>, I
+      highly recommend and will unashamedly evangelise for the usage of
+      <a href="https://www.ecosia.org/" target="_blank">Ecosia</a>. They are not
+      quite as private as I would like (although
+      <strong>far, far</strong> better than the likes of Google), but they are
+      an extremely ethical company that is genuinely making a difference, with
+      around <strong>98 million trees planted</strong> at the time of writing
+      this. If there is anything you take away from this mess of a website, I
+      hope it is a spark of interest in using
+      <a href="https://www.ecosia.org/" target="_blank">Ecosia</a>.
+    </p>
+
+    <p class="return"><a href="index.html">Return to Home</a></p>
   </body>
 </html>
