--- a/about-me.html
+++ b/about-me.html
@@ -35,8 +35,12 @@
       view, the natural world is sustaining far too much damage, so much so that
       even in my rural village area I've taken to taking a bin-bag out with me
       because the obscene amount of litter I walk past on the way to the local
-      woods is downright <em>infuriating</em>. Although my preferences for
-      privacy point me towards search engines such as
+      woods is downright <em>infuriating</em>.
+    </p>
+
+    <p>
+      Although my preferences for privacy point me towards search engines such
+      as
       <a href="https://duckduckgo.com/" target="_blank">DuckDuckGo</a> or, even
       better, a random
       <a href="https://searx.space/" target="_blank">Searx instance</a>, I
