--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
       name="description"
       content="My name is Kyle Dormer and I am an undergraduate Computing student at the University of Gloucestershire. This page functions as a personal blog for my various thoughts and somewhat coherent ramblings."
     />
-    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/global.min.css" />
     <title>Kyle Dormer - Blog</title>
   </head>
 
