--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       low-level programming, which is admittedly quite the contrast. Outside of
       university, I enjoy bushcraft, hiking, music and reading."
     />
-    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/global.min.css" />
     <title>Kyle Dormer</title>
   </head>
 
