Alter image alt for avatar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ desc: Computing undergraduate studying at the University of Gloucestershire.
 <header>
   <img
     src="/assets/images/avatar.webp"
-    alt="Myself on a lovely hike around Prestbury Hill. At least it was lovely until the rain hit."
+    alt="Myself on a lovely hike around Prestbury Hill, near Cheltenham. At least it was lovely until the rain hit."
   />
   <h1>Kyle Dormer</h1>
   {% include nav.html %}
