Correct index title

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 ---
 layout: default
-title: Kyle Dormer - Home
+title: Home
 ---
 
 <header>
   <img
     src="/assets/images/avatar.webp"
     alt="Myself on a lovely hike around Prestbury Hill, near Cheltenham. At least it was lovely until the rain hit."
+    width="300"
+    height="300"
   />
   <h1>Kyle Dormer</h1>
   {% include nav.html %}
