--- a/habits.html
+++ b/habits.html
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: Blog
+title: Habits
 ---
 
 <h2>2021</h2>
 <ul>
-  {% for post in site.categories.blog %}
+  {% for post in site.categories.habits %}
   <li>
     <a href="{{ post.url }}"
       >{{ post.title }} - {{ post.date | date_to_string }}</a
