Add notice in habits page

--- a/habits.html
+++ b/habits.html
@@ -4,6 +4,10 @@ title: Habits
 ---
 
 <h2>2021</h2>
+As mentioned
+<a href="{% post_url 2021-04-29-habits %}" target="_blank">here</a>, I am going
+to be performing an experiment in leveraging public accountability to keep up
+good habits. These can be found below.
 <ul>
   {% for post in site.categories.habits %}
   <li>
